# AI-health-Assistant

./: Dockerfile  README.md  compose.yaml  requirements.txt  requirments.txt
.github/: .workflows
.github/.workflows/: deploy-telegram-bot.yml
.github/workflows/: deploy-telegram-bot.yml
app/: index.py  main.py  requirements.txt
app/components/: bot-commands.yml  client.py  messanger.py  server.py
app/components/agents/: agent-prompts.yml  llmchain.py
job_search/: README.md  pyproject.toml
job_search/src/job_search/: crew.py  main.py
