[project]
name = "job_search"
version = "0.1.0"
description = "job-search using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0"
]

[project.scripts]
job_search = "job_search.main:run"
run_crew = "job_search.main:run"
train = "job_search.main:train"
replay = "job_search.main:replay"
test = "job_search.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
